# mrm-platform

./: Makefile  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 152864ab753e_make_regulatory_mapping_control_key_.py  b56c60c753bc_initial_schema.py  c7e9f572232b_fix_audit_logs_report_generated_type_.py  cf078ba87f00_fix_findings_regulatory_reference_type_.py
backend/app/: config.py  database.py  errors.py  main.py
backend/app/api/: ai_models.py  audit.py  control.py  discovery.py  gate.py  regulatory.py  risk.py
backend/app/engines/: control.py  risk.py
backend/app/models/: __init__.py  ai_asset.py  ai_model.py  audit_log.py  control_assessment.py  enums.py  finding.py  guardrail_policy.py  llm_configuration.py  regulatory_mapping.py  report.py  risk_assessment.py
backend/app/scanners/: __init__.py  mock_scanners.py  scanner.py
backend/app/schemas/: ai_model.py  audit.py  control.py  discovery.py  gate.py  regulatory.py  risk.py
backend/app/services/: ai_model.py  audit.py  audit_query.py  control.py  discovery.py  gate.py  regulatory.py  regulatory_seed.py  risk.py  scanner.py
backend/scripts/: seed_data.py
backend/tests/: test_ai_models.py  test_audit.py  test_audit_api.py  test_control_api.py  test_control_engine.py  test_discovery.py  test_docker.py  test_gate.py  test_promote.py  test_regulatory.py  test_risk_api.py  test_risk_engine.py  test_schema.py  test_seed.py
docs/: demo-walkthrough.md
frontend/: README.md  (+2 more)
(+20 files in other folders)
